--- a/style.css
+++ b/style.css
@@ -7,11 +7,13 @@ nav{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(37, 35, 35);
+    /* background-color: rgb(37, 35, 35); */
     color: white;
     height: 56px;
 }
-
+li {
+    color: white;
+}
 .content{
     font-family: 'Potta One', cursive;
 }
@@ -25,3 +27,13 @@ nav{
 .logo img{
     width: 34px;
 }
+
+
+body {
+    background-color:#0f0e13;
+  background-image: 
+    radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
+    radial-gradient(at 50% 0%, hsla(225,39%,30%,1) 0, transparent 50%), 
+    radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 50%);
+  }
+  
